@@ -1,5 +1,10 @@
 2004-04-16  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-prefs.c:
+	Wire up the Help button. Thanks to Brent Fox for the patch.
+
+2004-04-16  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-extractor.c:
 	Handle the new GStreamer 0.8 error callback prototype.
 
